<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo3"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:shapeAppearanceOverlay="@style/RoundedImage"
        android:scaleType="centerCrop"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="30"
            android:padding="6dp"
            android:textSize="15sp"
            android:background="@drawable/opcao_background"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/edtIdade"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/idade"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="2"
            android:padding="6dp"
            android:textSize="15sp"
            android:background="@drawable/opcao_background"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/edtPeso"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/peso_kg"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxLength="5"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="15sp"
            android:background="@drawable/opcao_background"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/edtAltura"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/altura_m"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxLength="4"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="15sp"
            android:background="@drawable/opcao_background"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCalcular"
        android:text="@string/calcular"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:backgroundTint="@color/fundo_botao" />

    <TextView
        android:text="@string/seu_imc"
        android:id="@+id/txtResultado"
        android:layout_marginTop="15dp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/btnCalcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/opcao_background"
        android:textColor="@color/red" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btnHistorico"
            android:text="@string/historico"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="60dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/txtResultado"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/fundo_botao" />

        <Button
            android:id="@+id/btnVoltar"
            android:text="@string/voltar"
            android:layout_marginTop="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/txtResultado"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/fundo_botao" />
    </LinearLayout>
</LinearLayout>
