<layout xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo3"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:shapeAppearanceOverlay="@style/RoundedImage"
        android:scaleType="centerCrop"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/attNome"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="30"
            android:padding="6dp"
            android:textSize="15sp"
            android:background="@drawable/opcao_background"
            android:textColor="@color/red"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/attIdade"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/idade"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="2"
            android:padding="6dp"
            android:textSize="15sp"
            android:background="@drawable/opcao_background"
            android:textColor="@color/red" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/attPeso"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/peso_kg"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxLength="5"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="15sp"
            android:background="@drawable/opcao_background"
            android:textColor="@color/red"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/attAltura"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/altura_m"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxLength="4"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="15sp"
            android:background="@drawable/opcao_background"
            android:textColor="@color/red" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAtualizacao"
        android:text="@string/atualizar"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:backgroundTint="@color/fundo_botao" />

        <Button
            android:id="@+id/btnCancelar"
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/txtResultado"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/fundo_botao" />
</LinearLayout>

</layout>
